<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_coor_picker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.khanhvo.mdp.PreInteractiveActivity">

        <LinearLayout
            android:id="@+id/start_coordinate_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x_label"
                android:textSize="@dimen/custom_text_size_medium"
                android:id="@+id/start_coordinate_X_label"
                android:textColor="@color/colorBlack"/>

            <EditText
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:id="@+id/coordinate_X"
                android:hint="@string/height_hint"
                android:inputType="number"
                android:layout_marginStart="@dimen/default_marginStart"
                android:layout_marginEnd="@dimen/default_marginStart"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y_label"
                android:textSize="@dimen/custom_text_size_medium"
                android:id="@+id/start_coordinate_Y_label"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="@dimen/default_marginStart"
                android:layout_marginLeft="@dimen/default_marginLeft" />

            <EditText
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:id="@+id/coordinate_Y"
                android:hint="@string/width_hint"
                android:inputType="number"
                android:layout_marginStart="@dimen/default_marginStart"
                android:layout_marginLeft="@dimen/default_marginLeft" />
        </LinearLayout>

        <Button
            android:layout_width="@dimen/navigation_drawer_width"
            android:layout_height="wrap_content"
            android:id="@+id/interactive_run"
            android:text="@string/initiate_interactive_control"
            android:textSize="@dimen/custom_text_size_medium"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/start_coordinate_input"
            android:onClick="runInteractive"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_coor_label"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/custom_text_size_large"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/start_coordinate_input"
            android:layout_marginBottom="10dp"/>

        <!--android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="@dimen/toolbar_elevation"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/-->

    </RelativeLayout>

    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
    android:layout_width="@dimen/navigation_drawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:choiceMode="singleChoice"
    android:divider="@color/colorGray"
    android:dividerHeight="@dimen/default_dividerHeight"
    android:background="@color/colorWhite"
    android:layout_margin="@dimen/navigation_drawer_margin"/>

</android.support.v4.widget.DrawerLayout>

