<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_exploration_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.khanhvo.mdp.ExplorationMapActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="@dimen/toolbar_elevation"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/status_bar"
            android:layout_below="@id/my_toolbar">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/show_md5"
                android:text="@string/show_md5_label"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/clock"
                android:layout_alignTop="@id/show_md5"
                android:layout_alignBottom="@id/show_md5"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_medium"
                android:text="@string/initial_clock"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/robot_current_status"
                android:text="@string/robot_initial_status"
                android:gravity="center"
                android:textSize="@dimen/custom_text_size_medium"
                android:padding="5dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:layout_toStartOf="@id/show_md5"
                android:layout_toEndOf="@id/clock"
                android:layout_alignTop="@id/show_md5"
                android:layout_alignBottom="@id/show_md5"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/maze_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/status_bar"
            android:orientation="vertical"></RelativeLayout>

    </RelativeLayout>


</android.support.v4.widget.DrawerLayout>

